# s3audit-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yaml  release.yaml
src/: common.rs  main.rs  s3.rs
src/s3/: acl.rs  audits.rs  bucket_acl.rs  bucket_encryption.rs  bucket_logging.rs  bucket_policy.rs  bucket_versioning.rs  bucket_website.rs  client.rs  encryption.rs  logging.rs  policy.rs  public_access_block.rs  report.rs  versioning.rs  website.rs
src/s3/policy/: actions.rs  principals.rs
src/s3/report/: csv_output.rs  report_type.rs
