[package]
name = "s3audit"
version = "0.1.0"
authors = [
    # Alphabetical by surname
    "Tim Bannister <tim@scalefactory.com>",
    "David O'Rourke <david@scalefactory.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/scalefactory/s3audit-rs"
repository = "https://github.com/scalefactory/s3audit-rs"
description = "Audit Amazon S3 buckets against recommended practices"
categories = [
    "command-line-utilities",
]
keywords = [
    "aws",
    "cli",
    "s3",
    "security",
]
exclude = [
    ".github",
    ".gitignore",
]

[dependencies]
anyhow = "1.0"
atty = "0.2"
colored = "2"
csv = "1.1"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = "1.0"

[dependencies.clap]
version = "2.33"
features = ["wrap_help"]

[dependencies.rusoto_core]
version = "0.46.0"
default-features = false
features = ["rustls"]

[dependencies.rusoto_s3]
version = "0.46.0"
default-features = false
features = ["rustls"]

[dev-dependencies]
pretty_assertions = "0.7"

[dev-dependencies.rusoto_mock]
version = "0.46.0"
default-features = false
features = ["rustls"]
