[package]
name = "s3audit"
version = "1.0.0"
authors = [
    # Alphabetical by surname
    "Tim Bannister <tim@scalefactory.com>",
    "David O'Rourke <david@scalefactory.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/scalefactory/s3audit-rs"
repository = "https://github.com/scalefactory/s3audit-rs"
description = "Audit Amazon S3 buckets against recommended practices"
rust-version = "1.58.1"
resolver = "2"
categories = [
    "command-line-utilities",
]
keywords = [
    "aws",
    "cli",
    "s3",
    "security",
]
exclude = [
    ".github",
    ".gitignore",
]

[dependencies]
anyhow = "1.0"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-types = "0.49.0"
colored = "2"
csv = "1.1"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"

[dependencies.clap]
version = "3.2.5"
features = [
    "derive",
    "std",
    "wrap_help",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.0"
features = [
    "macros",
    "rt-multi-thread",
]

[dev-dependencies]
pretty_assertions = "1.0"
